# recsys-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: unit_test.yml
configs/: hccf_base_config.yaml  lightgcn_config.yaml  pep_debug_config.yaml  pep_retrain_debug_config.yaml
configs/avazu/: base_config.yaml  cerp_config_find_50.yaml  cerp_config_find_80.yaml  cerp_config_find_95.yaml  cerp_config_retrain-50.yaml  cerp_config_retrain-80.yaml  dhe_config-50.yaml  dhe_config-95.yaml  dhe_config.yaml  dhe_config_80.yaml  opt_embed_debug.yaml  opt_embed_retrain_debug.yaml  pep_retrain_sample.yaml  pep_sample.yaml  qr_2.yaml  qr_20.yaml  qr_5.yaml  tt_rec-80.yaml  tt_rec_50.yaml
configs/deepfm/: base_config.yaml  cerp_config-find-50.yaml  cerp_config-find-80.yaml  cerp_config-find-95.yaml  cerp_config-retrain-50.yaml  cerp_config.yaml  cerp_config_retrain-80.yaml  cerp_config_retrain-95.yaml  dhe_config-50-v2.yaml  dhe_config-50.yaml  dhe_config.yaml  dhe_config_50.yaml  dhe_config_80.yaml  opt_embed_debug.yaml  opt_embed_retrain_debug.yaml  pep_retrain_sample.yaml  pep_sample.yaml  qat_config.yaml  qr_50.yaml  qr_80.yaml  qr_95.yaml  tt_rec.yaml  tt_rec_50.yaml  tt_rec_80.yaml  tt_rec_95.yaml
configs/gowalla/: base_config.yaml  cerp_config-50.yaml  cerp_config-80.yaml  cerp_config_retrain-50.yaml  cerp_config_retrain-80.yaml  dh_config-256-256-128-128.yaml  dh_config-512-512-512.yaml  opt-embed-100.yaml  opt-embed-retrain.yaml  pep_debug_config.yaml  pep_find_mask08.yaml  pep_retrain.yaml  qr-2.yaml  qr-5.yaml  sgl-wa-best-config.yaml  tt-emb-50.yaml  tt-emb-80-debug.yaml  tt-emb-80.yaml
configs/lightgcn/: opt-embed.yaml  pep_debug_config.yaml  pep_find_mask0.8.yaml  pep_retrain.yaml  qr-5.yaml  tt-emb-2.yaml  tt-emb-96-96.yaml
docs/: deepfm_tutorial.md  lightgcn_tutorial.md  pep_tutorial.md  supported_emb.md
scripts/: exp_compare_hash.py  exp_find_hparams.py  generate_config.py  generate_retrain_config.py  monitor.sh  run_opt_evol_lightgcn.py  test_opt_evol.py  train_deepfm.py  train_lightgcn.py  train_lightgcn_pep.py  train_lightgcn_pep_v2.py
src/: graph_utils.py  loggers.py  losses.py  metrics.py  utils.py
src/dataset/: base.py  (+5 more)
tests/: test_avazu.py  test_criteo.py  test_emb.py  test_layers.py  test_lightgcn.py  test_metrics.py  test_multiple_init_opt.py  test_opt_embed_sampling.py  test_train_deepfm.py  test_train_lightgcn.py
(+104 files in other folders)
